# tauri-yew

./: Cargo.toml  README.md
app/: build.rs  tauri.conf.json
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
