[package]
edition = "2021"
name = "frontend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
target = "wasm32-unknown-unknown"

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
yew = "0.19"
